@@ -20,29 +20,25 @@
 
   cursor: pointer;
 
-  direction: rtl;
-  text-align: right;
-
   padding: 5px 5px 0px 0px;
   white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
+  text-align: right;
   height: 30px;
 
-  .name-text {
-    display: inline-block;
-    vertical-align: baseline;
-
-    &.ellipsis:after {
-      content:"\2026";
-      margin-right: -4px;
-    }
+  .progress-text {
+    padding-left: 3px;
+    float: right;
   }
 
   .em-table-status-cell {
     display: inline-block;
-    vertical-align: text-top;
+    vertical-align: top;
+    padding-left: 3px;
 
-    direction: ltr;
+    float: right;
 
     .status {
       display: inline-block;
@@ -61,5 +57,10 @@
       margin-top: 2px;
     }
   }
+}
 
+@-moz-document url-prefix() {
+  .progress-text, .em-table-status-cell {
+    float: none !important;
+  }
 }
